[tool.poetry]
name = "pysnmp-pyasn1"
version = "1.1.3"
description = "ASN.1 types and codecs"
authors = ["rfaircloth-splunk <rfaircloth@splunk.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/pysnmp/pyasn1"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"
packages = [
    { include = "pyasn1" },
]
include = ["docs", "tests"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
Sphinx = "^4.3.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
mypy = "^0.910"
pytest-mypy = "^0.8.1"
black = "^21.11b0"
isort = "^5.10.1"
pyflakes = "^2.4.0"
autoflake = "^1.4"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
